# boostkata

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
asio/src/: CMakeLists.txt  asio_print.cpp  synchronous_daytime_server.cpp
date_time/src/: CMakeLists.txt  ebb.cpp  ebb_flow.cpp  new_ebb.cpp
date_time/test/: CMakeLists.txt  cleanup.sh  setup.sh  test_helgeroa_iso.cpp  test_main.cpp  test_project_scaffolding.hpp  test_read_iso_file.cpp
filesystem/src/: CMakeLists.txt  verifyfs.cpp
filesystem/test/: CMakeLists.txt  test_main.cpp
include/: BoostKata.hpp  ebb_flow.h  regexpcpp.h
include/catch2/: catch.hpp  catch_reporter_tap.hpp  catch_reporter_teamcity.hpp
include/iostreams/example/: container_device.hpp  dictionary_filter.hpp  shell_comments_filter.hpp  unix2dos_filter.hpp
regex/src/: CMakeLists.txt  password.cpp  tenwords.cpp
regex/test/: CMakeLists.txt  test_basic_regex.hpp  test_intermediate_regex.hpp  test_main_regex.cpp
src/: BoostKata.cpp  CMakeLists.txt  asio_class_printer.cpp  asio_hello_world.cpp  asio_print.cpp  boostany.cpp  lexical_cast.cpp  once_a_second.cpp  our_program.cpp  regexcpp.cpp  synchronize_handlers.cpp  synchronous_daytime_client.cpp
test/: BoostKataTest.cpp  CMakeLists.txt  boost_random_test.cpp  cleanup.sh  setup.sh  test_basic_regex.hpp  test_boost_libs.cpp  test_intermediate_regex.hpp  test_iostream.cpp  test_iostream_dict.cpp  test_iostream_files.cpp  test_iostream_shell_comment.cpp  test_iostream_unix2dos.cpp  test_lexical_cast.cpp  test_main_io.cpp  test_main_phoenix.cpp  test_phoenix_basic.cpp  test_project_scaffolding.hpp  test_unordered_set.cpp
